--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,10 @@
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
+	<properties>
+              <sonar.organization>ryain-g</sonar.organization>
+              <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        </properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -43,6 +47,7 @@
 			<artifactId>spring-boot-starter-mail</artifactId>
 			<version>2.3.4.RELEASE</version>
 		</dependency>
+
 
 		<dependency>
 			<groupId>org.thymeleaf</groupId>
